# claudecode

./: .gitignore  CLAUDE.md
projects/lidar/: .gitignore  CLAUDE.md  pyproject.toml
projects/lidar/data/: green_hill_query_points.geojson
projects/lidar/notebooks/: green_hill_analysis.ipynb
projects/lidar/scripts/: setup_ec2.sh
projects/lidar/src/lidar/: __init__.py  buildings.py  cli.py  fetch.py  parcels.py  spatial.py  terrain.py  viz.py  watershed.py
projects/lidar/tests/: conftest.py  test_buildings.py  test_fetch.py  test_spatial.py  test_terrain.py
projects/market-agent/: CLAUDE.md  pyproject.toml
projects/market-agent/launchd/: com.market-agent.daily-scan.plist
projects/market-agent/scripts/: agent_pipeline.py  backtest.py  cot_study.py  gold_cot_study.py  market-scan.sh  pipeline.py  report.py  scan.py  scheduled_scan.py
projects/market-agent/src/market_agent/: __init__.py
projects/market-agent/src/market_agent/agents/: __init__.py  architect.py  evaluator.py  madman.py  orchestrator.py  regime.py  risk_monitor.py  state.py
projects/market-agent/src/market_agent/analysis/: black_scholes.py  charts.py  institutional.py  (+6 more)
projects/market-agent/tests/: conftest.py  test_backtest.py  test_black_scholes.py  test_charts.py  test_comex.py  test_config.py  test_cot.py  test_futures.py  test_institutional.py  test_kelly.py  test_options.py  test_options_engine.py  test_reporter.py  test_scheduled_scan.py  test_screener.py  test_sectors.py  test_strategies.py  test_tasty_backtest.py  test_technical.py  test_theta.py  test_usgs.py  test_vol_regime.py  test_watchlist.py
projects/market-agent/tests/agents/: test_architect.py  test_evaluator.py  test_madman.py  test_orchestrator.py  test_orchestrator_p3.py  test_regime.py  test_risk_monitor.py  test_state.py
projects/pfas-analysis/: CLAUDE.md  pyproject.toml
projects/pfas-analysis/data/compounds/: pfac24_compounds.yaml
projects/pfas-analysis/data/methods/: compounds.yaml  current_method.yaml  gap_analysis.yaml  instrument_method.yaml  qc_criteria.yaml  validation_checklist.yaml
projects/pfas-analysis/docs/: instrument-checklist.md  validation-checklist.md
projects/pfas-analysis/notebooks/: validation_checklist.ipynb
projects/pfas-analysis/scripts/: estimate_retention_times.py  import_optimization.py  print_validation_checklist.py  update_exact_masses.py  update_from_sop.py
projects/pfas-analysis/src/pfas_analysis/: __init__.py
projects/tastytrade/: CLAUDE.md  pyproject.toml
projects/tastytrade/docs/: api-reference.md  backtesting.md  orders.md  streaming.md  tastytrade-api-overview.md
projects/tastytrade/src/tastytrade_strategy/: __init__.py  chain_builder.py  chain_parser.py  cli.py  journal.py  mcp_parser.py  models.py  risk.py  screener.py  strategies.py
projects/tastytrade/tests/: test_chain_parser.py  test_journal.py  test_journal_agent.py  test_mcp_parser.py  test_models.py  test_pipeline.py  test_risk.py  test_risk_agent.py  test_screener.py  test_strategies.py
(+46 files in other folders)
